--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "SPA made with Javascript Vainilla, HTML, CSS, Webpack and Babel",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [
     "SPA",
@@ -15,5 +16,16 @@
     "Babel"
   ],
   "author": "Rafael Moro <rafael.moro.galindo@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.6.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.5.3",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2"
+  }
 }
