--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SPA made with Javascript Vainilla, HTML, CSS, Webpack and Babel",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack --mode development",
+    "start": "webpack-dev-server --open --mode development",
     "build": "webpack --mode production"
   },
   "keywords": [
@@ -26,6 +26,7 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
     "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
