--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "SPA made with Javascript Vainilla, HTML, CSS, Webpack and Babel",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
-    "build": "webpack --mode production"
+    "start": "webpack-dev-server --config webpack.dev.config.js",
+    "build": "webpack --config webpack.config.js"
   },
   "keywords": [
     "SPA",
@@ -23,11 +23,14 @@
     "@babel/preset-env": "^7.16.11",
     "animate.css": "^4.1.1",
     "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.6.0",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "dotenv-webpack": "^7.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
+    "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
